# Mashup-Lang

./: '  .gitignore  2  3  Cargo.toml  LICENSE  Makefile  README.md  \  test
docs/: syntax.md  todo.md
examples/: main.ll  main.mash  present.mash
src/: lexer.rs  lib.rs  main.rs  tokens.rs  utils.rs
src/ast/: ast.rs
src/examples/: mod.rs
src/lexer/: lexer.rs
src/parser/: constructs.rs  mod.rs  parser.rs  variable.rs
src/tests/: expected_outputs.rs  mod.rs
src/utils/: methods.rs  mod.rs  tokens.rs  utils.rs
tests/: expected_outputs.rs  lexer.rs  mod.rs  parser.rs  test_code.mash
